--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,29 @@ dependencies {
     implementation 'com.github.rey5137:material:1.2.5'
     implementation 'io.paperdb:paperdb:2.6'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+
+    //mpesa
+    implementation 'com.androidstudy:daraja:1.0.2'
+
+
+    implementation 'androidx.navigation:navigation-fragment:2.0.0'
+    implementation 'androidx.navigation:navigation-ui:2.0.0'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-invites:16.0.4'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    implementation 'com.github.rey5137:material:1.2.5'
+
+    implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
+
+    implementation 'io.paperdb:paperdb:2.6'
+
+
+    implementation 'pub.devrel:easypermissions:1.1.3'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
